---------------------------   version 3.03
20101122 can use a local file front.phtml.$lang instead of distribution one (FG)
---------------------------   version 3.02
20100326 can directly launch series of exercices with variable directworksheet (FG)
---------------------------   version 3.01
20090902 search_engine form and words(all languages) is now in script/adm/search_engine directory (F. Guerimand)
20080628 variable daymessage for display message of the day in homepage presentation document (F. Guerimand)