@@ -134,8 +134,9 @@ li {
     right:6%;
 }
 #wimslogoleft {
-    top:25px;
-    left:6%;
+    position: absolute;
+    top:0px;
+    left:12%;
     float:left;
 }
 #wimslogoright {
