@@ -32,7 +32,12 @@
 <span class="menuitem">
 <span id="wimslogo">
 !href module=home&special_parm=logo <img src="gifs/logo.gif" border=0 alt="WIMS logo">
-</span><!--wimslogo-->
+</span><!--serverlogo-->
+!if $site_logo!=$empty
+ <span id="wimslogoleft">
+ <a href="$site_logolink" <img src="$site_logo" border=0 alt="WIMS logo">
+ </span><!--serverlogo-->
+!endif
 </span><!--menuitem-->
 !for i=1 to $wims_language_cnt
  !set l=!word $i of $wims_site_languages
