@@ -1,4 +1,5 @@
 ---------------------------   version 3.03
+20101122 use of variable site_logo and site_logolink of wims.conf file to show a local server logo (FG)
 20101122 can use a local file front.phtml.$lang instead of distribution one (FG)
 ---------------------------   version 3.02
 20100326 can directly launch series of exercices with variable directworksheet (FG)
